[tool.poetry]
name = "zshort-py"
version = "0.1.0"
description = ""
authors = ["Zevaryx <zevaryx@gmail.com>"]
readme = "README.md"
packages = [{include = "zshort_py"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
pydantic = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
